--- a/css/styles.css
+++ b/css/styles.css
@@ -15,13 +15,24 @@ img {
   width: 50%;
 }
 
+.disquette { 
+  width: 10%;
+  padding-bottom: 20px;
+}
+
 header {
-  background-image: url(../img/DALL·E\ 2023-04-24\ 23.27.07\ -\ Create\ the\ background\ of\ a\ website\,\ some\ texture\,\ that\ looks\ like\ technology\ and\ electronic.png);
+  background-image: url(../img/bg-background.png);
   padding: 30px;
 }
 
 .section-light {
   background: #E6F3FF;
+  padding: 30px;
+}
+
+.section-dark {
+  background: #11161D;
+  padding: 30px;
 }
 
 .act-light {
@@ -33,7 +44,6 @@ header {
   border-radius: 12px;
   margin: 20px;
   padding: 10px;
-
 }
 
 .act {
@@ -45,4 +55,9 @@ header {
   border-radius: 12px;
   margin: 20px;
   padding: 10px;
+}
+
+footer{
+  background: #11161D;
+  padding: 30px;
 }
