--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,8 @@ h3 {
   flex-direction: column;
   align-items: center;
   border-radius: 12px;
-  margin: 20px;
+  margin: 45px;
+  margin-top: 20px;
   padding: 10px;
   font-family: 'Space Grotesk', sans-serif;
 }
@@ -94,9 +95,37 @@ h3 {
   font-family: 'Space Grotesk', sans-serif;
 }
 
+.act-f {
+  display: flex;
+  background-color: #11161D;
+  color: #E6F3FF;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 12px;
+  margin: 65px;
+  margin-bottom: 15px;
+  margin-top: 30px;
+  padding: 10px;
+  font-family: 'Space Grotesk', sans-serif;
+}
+
+.act-i {
+  display: flex;
+  background-color: #11161D;
+  color: #E6F3FF;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 12px;
+  margin: 55px;
+  margin-top: 10px;
+  padding: 10px;
+  font-family: 'Space Grotesk', sans-serif;
+}
+
 footer{
   background: #11161D;
   padding: 30px;
   color: #E6F3FF;
   font-family: 'Space Grotesk', sans-serif;
+  padding-bottom: 5px;
 }
